Runtime: Use uanme to get kernel architecture.

In some systems, the user space is 32 bit, but kernel is 64 bit, so
can't use the compiler's flag to determine the kernel'a architecture,
use uname to get it.

It fix bug:
https://bugs.freedesktop.org/show_bug.cgi?id=95245

Signed-off-by: Yang Rong <rong.r.yang@intel.com>
Reviewed-by: Ruiling Song <ruiling.song@intel.com>